# sdb-rs

./: CLAUDE.md  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
libsdb/: Cargo.toml
libsdb/src/: address.rs  breakpoint.rs  cursor.rs  disassembler.rs  dwarf.rs  dwarf_constants.rs  elf.rs  elf_internal.rs  lib.rs  pipe_channel.rs  process.rs  register_info.rs  stack.rs  target.rs
libsdb/tests/: dwarf.rs  elf.rs  process.rs
sdb-rs/: Cargo.toml
sdb-rs/src/: command.rs  command_new.rs  main.rs  options.rs  tui.rs
sdb-rs/src/command/: breakpoint_command.rs  catchpoint_command.rs  disassemble_command.rs  memory_command.rs  mod.rs  register_command.rs
tools/anti_debugger/: Cargo.toml  build.rs
tools/anti_debugger/src/: lib.cpp  main.rs
tools/dwarf_fixture/: Cargo.toml  build.rs
tools/dwarf_fixture/src/: lib.rs  lib_a.c  lib_b.c  main.c  main.rs
tools/hello_sdb/: Cargo.toml
tools/hello_sdb/src/: main.rs
tools/memory_test/: Cargo.toml
tools/memory_test/src/: main.rs
tools/reg_read/: Cargo.toml  build.rs
tools/reg_read/asm/: reg_read.s
tools/reg_write/: Cargo.toml  build.rs
tools/reg_write/asm/: reg_write.s
tools/test_program/: Cargo.toml
tools/test_program/src/: main.rs
