[package]
name = "libsdb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
extended = "0.1.0"
libc = "0.2.172"
nix = { version = "0.30.1", features = ["ptrace", "signal", "fs"] }
reg_write = { path = "../tools/reg_write", optional = true }
reg_read = { path = "../tools/reg_read", optional = true }