[package]
name = "libsdb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
extended = "0.1.0"
libc = "0.2.172"
memmap = "0.7.0"
nix = { version = "0.30.1", features = ["ptrace", "signal", "fs", "uio"] }
syscalls = { version = "0.7.0", features = ["x86_64"] }
test-binary = "3.0.2"
zydis = "4.1.1"

[dev-dependencies]
elf = "0.8.0"
procfs = "0.17.0"
