[package]
name = "sdb-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sdb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
dirs = "6.0.0"
libsdb = { path = "../libsdb" }
rustyline = { version = "15.0.0", features = ["with-file-history"] }
