[package]
name = "sdb-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sdb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
ctrlc = "3.4.7"
dirs = "6.0.0"
lazy_static = "1.5.0"
libsdb = { path = "../libsdb" }
nix = "0.30.1"
ptrie = "0.7.2"
rustyline = { version = "15.0.0", features = ["custom-bindings", "derive", "with-file-history"] }
